[gd_scene load_steps=15 format=3 uid="uid://bovx4wbvk8g0j"]

[ext_resource type="Script" path="res://dialogues/dialogue.gd" id="1_nbsky"]
[ext_resource type="Texture2D" uid="uid://du6gvsf010jun" path="res://dialogues/Village1.png" id="1_wlb1g"]
[ext_resource type="Texture2D" uid="uid://bd3ca4po2rudk" path="res://sprites_and_animations/WizardSpriteSheetFinal.png" id="2_bs6fl"]
[ext_resource type="Texture2D" uid="uid://rmhn52yfi1nb" path="res://Sprite-0000.png" id="3_cgiq0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_up5hk"]
atlas = ExtResource("2_bs6fl")
region = Rect2(0, 0, 1600, 1600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev313"]
atlas = ExtResource("2_bs6fl")
region = Rect2(1600, 0, 1600, 1600)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt8ew"]
atlas = ExtResource("2_bs6fl")
region = Rect2(3200, 0, 1600, 1600)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhasd"]
atlas = ExtResource("2_bs6fl")
region = Rect2(4800, 0, 1600, 1600)

[sub_resource type="SpriteFrames" id="SpriteFrames_3swr7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_up5hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev313")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt8ew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhasd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ktr"]
atlas = ExtResource("3_cgiq0")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh3sn"]
atlas = ExtResource("3_cgiq0")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1kk0"]
atlas = ExtResource("3_cgiq0")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhh1q"]
atlas = ExtResource("3_cgiq0")
region = Rect2(60, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_mleio"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ktr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh3sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1kk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhh1q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="LadderDialogue" type="Node2D"]
script = ExtResource("1_nbsky")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("1_wlb1g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(178, 526)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_3swr7")
frame_progress = 0.661229

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(574, 569)
rotation = -3.14159
scale = Vector2(5.775, 5)
sprite_frames = SubResource("SpriteFrames_mleio")
frame_progress = 0.461394

[node name="PlayerSpeechContainer" type="CenterContainer" parent="."]
offset_left = 622.0
offset_top = 496.0
offset_right = 647.0
offset_bottom = 531.0

[node name="P" type="PanelContainer" parent="PlayerSpeechContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="PlayerSpeechContainer/P"]
layout_mode = 2
color = Color(0.172549, 0.172549, 0.172549, 0.803922)

[node name="MarginContainer" type="MarginContainer" parent="PlayerSpeechContainer/P"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="PlayerSpeech" type="Label" parent="PlayerSpeechContainer/P/MarginContainer"]
layout_mode = 2

[node name="NPCSpeechContainer" type="CenterContainer" parent="."]
offset_left = 248.0
offset_top = 451.0
offset_right = 272.0
offset_bottom = 486.0

[node name="P" type="PanelContainer" parent="NPCSpeechContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="NPCSpeechContainer/P"]
layout_mode = 2
color = Color(0.172549, 0.172549, 0.172549, 0.803922)

[node name="MarginContainer" type="MarginContainer" parent="NPCSpeechContainer/P"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="NPCSpeech" type="Label" parent="NPCSpeechContainer/P/MarginContainer"]
layout_mode = 2
text = "Hello  hjghjghjgh"

[node name="DialogueHeartbeat" type="Timer" parent="."]
process_callback = 0
wait_time = 0.125
autostart = true

[connection signal="timeout" from="DialogueHeartbeat" to="." method="_on_heartbeat"]
